httproute/service-a-httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: service-a
  namespace: service-a
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
    namespace: gateway
  hostnames:
  - "service-a.internal.example.com"
  rules:
  - backendRefs:
    - name: whereami-service-a
      port: 80
